--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     rel="stylesheet">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>React App</title>
+  <title>Time Tracker</title>
 </head>
 
 <body>
